fixed text margins

--- a/client/src/Components/Journey/Journey.scss
+++ b/client/src/Components/Journey/Journey.scss
@@ -10,16 +10,17 @@
 
     &__adidas-logo {
         position: absolute;
-        left: 39%;
+        left: 40%;
         top: 39%;
     }
 
     &__header-container {
-        width: 60%;
-        margin: 15% auto;
+        width: 200px;
+        margin: 6vh auto;
     }
 
     &__header {
         font-size: 14px;
+        margin: auto;
     }
 }   
