Adding Footer component - flag fixed and font re-sized to 0.6rem

--- a/client/src/Components/Footer/Footer.scss
+++ b/client/src/Components/Footer/Footer.scss
@@ -2,7 +2,6 @@
     background-color: #000000;
     margin: 0;
     padding: 0;
-    //height: 200px;
 
     &__container{
         display: flex;
@@ -14,46 +13,34 @@
         padding-top: 28px;
         padding-bottom: 32px;
 
-        line-height: 4.5px;
+        line-height: 2.2px;
     }
 
     &__text-top {
         color: #EEEEEE;
         font-weight: 600;
-        font-size: 0.75rem;
+        font-size: 0.6rem;
     }
 
     &__text-bottom {
         color: #707070;
         font-weight: 400;
-        font-size: 0.75rem;
+        font-size: 0.6rem;
     }
 
     &__flag-country-container {
         display: flex;
         flex-direction: row;
         justify-content: center;
-
-        line-height: 0px;
-        //font-size: 0.9rem;
     }
 
-    // &__flag-container{
-    //     margin: 0;
-    //     padding: 0;
-    //     background-color: #EEEEEE;
-    //     width: 25px;
-    //     height: 20px;
-    // }
     &__flag{
         margin: 0;
         padding: 0;
-      //  width: 100%;
-      width: 20px;
-       // object-fit: cover;
-       // object-position: center;
-
+        width: 18px;
+        margin-right: 3px;
     }
+
 
 }
 
@@ -62,21 +49,3 @@ a:link {
     padding: 0;
     text-decoration: none;
 }
-
-
-    // &__flag-container {
-    //     margin: 0;
-    //     padding: 0;
-    //     background-color: #EEEEEE;
-    //     width: 25px;
-    //     height: 20px;
-    // }
-
-    // &__flag {
-    //     margin: 0;
-    //     padding: 0;
-    //     width: 100%;
-    //     object-fit: cover;
-    //     object-position: center;
-
-    // }
