--- a/client/src/Components/Products/Products.scss
+++ b/client/src/Components/Products/Products.scss
@@ -1,38 +1,45 @@
 .products {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 
     &-text-cont{
         margin-top: 50px;
     }
 
     &-cont {
+        display: flex;
+        flex-direction: column;
         margin-top: 50px;
     }
 
-    &-img {
-        width: 100px;
+    &-wrap {
         display: flex;
-        flex-direction: column;
-        margin: 0 20px 12px 20px;
+        flex-direction: row;
+    }
+
+    &-img {
+        width: 32vw;
+        display: flex;
+        flex-direction: row;
+        margin: 0 20px 12px -25px;
 
         &-title {
-            display: flex;
-            flex-direction: column;
-            margin: 40px 0 80px 15px;
+            margin: 25px 0 40px 15px;
+            width: 37vw;
         }
 
         &-text {
-            margin-top: -10px;
-            &-2 {
-                color: #005B38;
-                margin-top: -18px;
-            }
-        }
-
-        &-text-cont {
+            margin-top: 25px;
+            font-size: 6vw;
             text-align: left;
             margin-left: 15px;
+
+
+            &-2 {
+                color: #005B38;
+                margin-top: -20px;
+            }
         }
     }
 }
