--- a/client/src/Components/VideoPlayer/VideoPlayer.scss
+++ b/client/src/Components/VideoPlayer/VideoPlayer.scss
@@ -2,7 +2,7 @@
     background-color: white;
     padding-bottom: 50px;
     &__container {
-        width: 320px;
+        width: 100vw;
         
     }
     &__video {
