--- a/client/src/Components/Hero/Hero.scss
+++ b/client/src/Components/Hero/Hero.scss
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'Adidas-Bold';
+    src: url('../../assets/fonts/adidas-bold.ttf') format('truetype');
+    font-style: bold;
+}
+
 .hero {
     font-family: Helvetica;
     font-weight: bold;
@@ -13,40 +19,67 @@
         width: 100%;
     }   
 
+    &-background {
+        display: flex;
+        background-color: black;
+        width:100vw;
+        height: 28vw;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
     &-title {
-        font-size: 14px;
+        font-size: 4.3vw;
         display: flex;
         text-align: left;
-        width: 180px;
-        margin: -180px 0 80px 18px;
+        width: 55vw;
+        margin-top: -53vw;
+        margin-bottom: 80px;
+        margin-left: 18px;
         color: white;
+    }
+    &-labelcont {
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-start;
+    }
+    
+    &-label {
+        display: flex;
+        margin-top: -525px;
+        margin-right: 10px;
+
+        &-text {
+            font-family: 'Adidas-Bold';
+            font-size: 8.8vw;
+            width: 140px;
+            line-height: 34px;
+        }
     }
 
     &-button {
-        width: 50px;
+        display: flex;
+        margin-left: 18px;
+        margin-top: -65px;
+        margin-bottom: 30px;
+        width: 32.5vw;
     }
 
     &-wrap {
         display: flex;
-        justify-content: center;
         flex-direction: column;
-        align-items: center;
 
         &-text {
+            font-family: 'Adidas-Bold';
             display: flex;
-            justify-content: center;
             text-align: center;
-            width: 300px;
-            margin-top: -85px;
+            white-space: nowrap;
             color: white;
-            font-size: 13.7px;
-
-            &__1 {
-                letter-spacing: -0.3px;
-            }
+            font-size: 4.3vw;
 
             &__2 {
-                margin-top: -13px;
+                margin-top: -18px;
             }
         }
     }
