cleaned up components

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -17,6 +17,7 @@
     }
 
     &__text-top {
+        font-family: Helvetica;
         color: #EEEEEE;
         font-weight: 600;
         font-size: 0.6rem;
