--- a/src/Components/Journey/Journey.scss
+++ b/src/Components/Journey/Journey.scss
@@ -1,5 +1,7 @@
 .journey {
-    // font-family: Arial
+    font-family: Arial;
+    line-height: 20px;
+    font-weight: bold;
     margin: 20% auto;
     width: 100%;
 
