--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -1,8 +1,4 @@
-@font-face {
-    font-family: 'Adidas-Bold';
-    src: url('../../assets/fonts/adidas-bold.ttf') format('truetype');
-    font-style: bold;
-}
+@import '../../styles/global.scss';
 
 .hero {
     font-family: Helvetica;
@@ -10,12 +6,13 @@
     margin: 0;
     padding: 0;
 
-
-
-    &-img{
+    &-cont{
+        background-image: url('/assets/images/svg/hero.svg');
+        height: 360px;
         width: 100%;
-        display: flex;
-        height: 80%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position-y: -80px;
     }
 
     &-text-background {
@@ -26,10 +23,29 @@
         display: flex;
         background-color: black;
         width: 100vw;
-        height: 28vw;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    
+    &-label {        
+        &-text {
+            text-align: right;
+            font-family: 'Adidas-Bold';
+            font-size: 9.5vw;
+            margin-right: 35px;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+
+        &-text-adidas {
+            padding-top: 21px;
+        }
+
+        &-text2 {
+            padding-top: 0px;
+            padding-right: 24px;
+        }
     }
 
     &-title {
@@ -37,30 +53,10 @@
         display: flex;
         text-align: left;
         width: 55vw;
-        margin-top: -53vw;
+        margin-top: 125px;
         margin-bottom: 80px;
-        margin-left: 18px;
+        margin-left: 19px;
         color: white;
-    }
-    
-    &-labelcont {
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-start;
-    }
-    
-    &-label {
-        margin-top: -33.5rem;
-
-        &-text {
-            font-family: 'Adidas-Bold';
-            font-size: 9.5vw;
-            margin-right: 35px;
-        }
-
-        &-text2 {
-            margin-top: -40px;
-        }
     }
 
     &-button {
@@ -82,9 +78,17 @@
             white-space: nowrap;
             color: white;
             font-size: 4.3vw;
-
+            &__1 {
+               margin: 0;
+               padding: 0;
+               line-height: 0.5rem;
+               margin-top: 27px;
+            }
             &__2 {
-                margin-top: -18px;
+                margin: 0;
+                padding: 0;
+                padding-top: 3px;
+                margin-bottom: 26px;
             }
         }
     }
